[tool.poetry]
name = "repl_python3_PYTHON-FUN"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.5.0"
pygame = "^2.1.2"
streamlit = "^1.4.0"
yfinance = "^0.1.69"
bs4 = "^0.0.1"
gTTS = "^2.2.3"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
